# kraken

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  export_data.sh  kraken_cli.py  pyproject.toml  redeploy.sh  setup.py
.github/workflows/: docker-publish.yml  documentation-publish.yml
docker/rabbitmq/: 10-default-guest-user.conf  Dockerfile  init.sh
env/: .elastic.env  .flower.env  .leek.env  .local.env  .mongodb.env  .rabbitmq.env  .worker.env
kraken/: celery_app.py  celery_config.py
kraken/core/: __init__.py  scheduler.py  spider.py  stage_processor.py
kraken/core/allocators/: __init__.py  abstract_resource_allocator.py  proportional_resource_allocator.py  static_resource_allocator.py  uniform_resource_allocator.py
kraken/core/schedulers/: abstract_scheduler.py  static_scheduler.py
kraken/core/tasks/: __init__.py  base.py  multi_stage_crawler.py  single_stage_crawler.py
kraken/core/types/: __init__.py  bucket.py  crawl.py  (+8 more)
kraken/google_play_store/: __init__.py
kraken/utils/: __init__.py  escape.py  hacky_datetime_parser.py  mongodb.py  mongoengine.py  pipeline.py
resources/filter/: target_filter_example_0.json  target_filter_example_1.json  target_filter_example_2.json  target_filter_example_3.json
resources/stages/: stage_gps_data_safety.json  stage_gps_detail_full.json  stage_gps_detail_partial.json  stage_gps_permission.json  stage_gps_review_budget.json  stage_gps_review_full.json  stage_gps_review_overlap.json  stage_gps_review_static.json
resources/targets/: gps_list_large.json  gps_list_medium.json  gps_list_small.json
(+26 files in other folders)
