[tool.poetry]
name = "kraken"
version = "0.1.0"
description = "kraken-description"
authors = ["Klaus Luhan <luhan@cispa.de>"]
readme = "README.md"

[tool.poetry.dependencies]
amqp = "^5.1.1"
celery = {extras = ["py-amqp"], version = "^5.2.7"}
click = "^8.1.3"
dacite = "^1.6.0"
flower = "^1.2.0"
google-play-scraper = {git = "https://github.com/kluhan/google-play-scraper.git"}
jsonpatch = "^1.32"
jsonschema = "^4.17.3"
mongoengine = "^0.24.2"
orjson = "^3.8.1"
pause = "^0.3"
python = "^3.10"
python-dateutil = "^2.8.2"
python-dotenv = "^0.21.0"
pymongo = "^4.3.2"
redis = "^4.3.4"
rich = "^13.3.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
mypy = "^0.982"
black = "^22.10.0"
pytest = "^7.2.1"

[tool.poetry.group.docs.dependencies]
pdoc = "^12.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
